--- a/src/index.html
+++ b/src/index.html
@@ -11,5 +11,5 @@
 <body>
   <app-root class="root"></app-root>
 </body>
-<script src="//connect.facebook.net/en_US/all.js"></script>
+<script type="text/javascript" src="https://connect.facebook.net/en_US/sdk.js"></script>
 </html>
